// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellDimensionController component should render CellDimensionController with default cell sizes 1`] = `
<React.Fragment>
  <span
    onClick={[Function]}
  >
    Foo
  </span>
  <ForwardRef(Menu)
    anchorEl={null}
    anchorOrigin={
      {
        "horizontal": "center",
        "vertical": "bottom",
      }
    }
    data-testid="cell-dimensions-menu"
    elevation={2}
    onClose={[Function]}
    open={false}
    transformOrigin={
      {
        "horizontal": "right",
        "vertical": "top",
      }
    }
  >
    <ForwardRef(List)
      classes={
        {
          "root": "table-interaction-menu",
        }
      }
    >
      <ForwardRef(ListSubheader)>
        Columns
      </ForwardRef(ListSubheader)>
      <ForwardRef(MenuItem)
        data-testid="column-width-dimension-xs"
        onClick={[Function]}
      >
        <ForwardRef(ListItemIcon)>
          <ForwardRef(Icon)
            data-testid="column-width-dimension-checked"
          >
            radio_button_checked
          </ForwardRef(Icon)>
        </ForwardRef(ListItemIcon)>
        <ForwardRef(ListItemText)
          id="xs"
          primary="xs"
        />
      </ForwardRef(MenuItem)>
      <ForwardRef(MenuItem)
        data-testid="column-width-dimension-xl"
        onClick={[Function]}
      >
        <ForwardRef(ListItemIcon)>
          <ForwardRef(Icon)
            data-testid="column-width-dimension-unchecked"
          >
            radio_button_unchecked
          </ForwardRef(Icon)>
        </ForwardRef(ListItemIcon)>
        <ForwardRef(ListItemText)
          id="xl"
          primary="xl"
        />
      </ForwardRef(MenuItem)>
      <ForwardRef(Divider) />
      <ForwardRef(ListSubheader)>
        Rows
      </ForwardRef(ListSubheader)>
      <ForwardRef(MenuItem)
        data-testid="row-height-dimension-s"
        onClick={[Function]}
      >
        <ForwardRef(ListItemIcon)>
          <ForwardRef(Icon)
            data-testid="row-height-dimension-checked"
          >
            radio_button_checked
          </ForwardRef(Icon)>
        </ForwardRef(ListItemIcon)>
        <ForwardRef(ListItemText)
          id="s"
          primary="s"
        />
      </ForwardRef(MenuItem)>
      <ForwardRef(MenuItem)
        data-testid="row-height-dimension-m"
        onClick={[Function]}
      >
        <ForwardRef(ListItemIcon)>
          <ForwardRef(Icon)
            data-testid="row-height-dimension-unchecked"
          >
            radio_button_unchecked
          </ForwardRef(Icon)>
        </ForwardRef(ListItemIcon)>
        <ForwardRef(ListItemText)
          id="m"
          primary="m"
        />
      </ForwardRef(MenuItem)>
    </ForwardRef(List)>
  </ForwardRef(Menu)>
</React.Fragment>
`;

exports[`CellDimensionController component should render the default CellDimensionController 1`] = `
<React.Fragment>
  <span
    onClick={[Function]}
  >
    Foo
  </span>
  <ForwardRef(Menu)
    anchorEl={null}
    anchorOrigin={
      {
        "horizontal": "center",
        "vertical": "bottom",
      }
    }
    data-testid="cell-dimensions-menu"
    elevation={2}
    onClose={[Function]}
    open={false}
    transformOrigin={
      {
        "horizontal": "right",
        "vertical": "top",
      }
    }
  >
    <ForwardRef(List)
      classes={
        {
          "root": "table-interaction-menu",
        }
      }
    >
      <ForwardRef(ListSubheader)>
        Columns
      </ForwardRef(ListSubheader)>
      <ForwardRef(MenuItem)
        data-testid="column-width-dimension-small"
        onClick={[Function]}
      >
        <ForwardRef(ListItemIcon)>
          <ForwardRef(Icon)
            data-testid="column-width-dimension-checked"
          >
            radio_button_checked
          </ForwardRef(Icon)>
        </ForwardRef(ListItemIcon)>
        <ForwardRef(ListItemText)
          id="small"
          primary="small"
        />
      </ForwardRef(MenuItem)>
      <ForwardRef(MenuItem)
        data-testid="column-width-dimension-medium"
        onClick={[Function]}
      >
        <ForwardRef(ListItemIcon)>
          <ForwardRef(Icon)
            data-testid="column-width-dimension-unchecked"
          >
            radio_button_unchecked
          </ForwardRef(Icon)>
        </ForwardRef(ListItemIcon)>
        <ForwardRef(ListItemText)
          id="medium"
          primary="medium"
        />
      </ForwardRef(MenuItem)>
      <ForwardRef(MenuItem)
        data-testid="column-width-dimension-large"
        onClick={[Function]}
      >
        <ForwardRef(ListItemIcon)>
          <ForwardRef(Icon)
            data-testid="column-width-dimension-unchecked"
          >
            radio_button_unchecked
          </ForwardRef(Icon)>
        </ForwardRef(ListItemIcon)>
        <ForwardRef(ListItemText)
          id="large"
          primary="large"
        />
      </ForwardRef(MenuItem)>
      <ForwardRef(Divider) />
      <ForwardRef(ListSubheader)>
        Rows
      </ForwardRef(ListSubheader)>
      <ForwardRef(MenuItem)
        data-testid="row-height-dimension-small"
        onClick={[Function]}
      >
        <ForwardRef(ListItemIcon)>
          <ForwardRef(Icon)
            data-testid="row-height-dimension-checked"
          >
            radio_button_checked
          </ForwardRef(Icon)>
        </ForwardRef(ListItemIcon)>
        <ForwardRef(ListItemText)
          id="small"
          primary="small"
        />
      </ForwardRef(MenuItem)>
      <ForwardRef(MenuItem)
        data-testid="row-height-dimension-medium"
        onClick={[Function]}
      >
        <ForwardRef(ListItemIcon)>
          <ForwardRef(Icon)
            data-testid="row-height-dimension-unchecked"
          >
            radio_button_unchecked
          </ForwardRef(Icon)>
        </ForwardRef(ListItemIcon)>
        <ForwardRef(ListItemText)
          id="medium"
          primary="medium"
        />
      </ForwardRef(MenuItem)>
      <ForwardRef(MenuItem)
        data-testid="row-height-dimension-large"
        onClick={[Function]}
      >
        <ForwardRef(ListItemIcon)>
          <ForwardRef(Icon)
            data-testid="row-height-dimension-unchecked"
          >
            radio_button_unchecked
          </ForwardRef(Icon)>
        </ForwardRef(ListItemIcon)>
        <ForwardRef(ListItemText)
          id="large"
          primary="large"
        />
      </ForwardRef(MenuItem)>
    </ForwardRef(List)>
  </ForwardRef(Menu)>
</React.Fragment>
`;
